# SPIDERWEB

./: .dockerignore  .replit  ADVANCED_ML_ARCHITECTURE.md  AI_SERVICES_SUMMARY.md  API_DOCUMENTATION.md  AZURE_AUTH_SETUP.md  CHANGELOG.md  Cargo.toml  DEPLOYMENT_SETUP_SUMMARY.md  Dockerfile  FRAMEWORK_SUMMARY.md  HOW_TO_DEPLOY.sh  Makefile  NEXT_STEPS.md  PRODUCTION_DEMO.md  QUICKSTART.md  README.md  TESTER_GUIDE.md  Theory.md  azure-app-service.json  azure-container-app.yaml  build_all_macos_arm.sh  build_macos_arm.sh  build_macos_arm_vst3.sh  build_macos_universal.sh  build_replit.sh  build_vst.sh  build_vst_bundle.sh  create_release_package.sh  demo_server.py  deploy-azure.sh  download.html  export_bulk_synths.sh  export_plugin.sh  llm_API_research.md  pyproject.toml  replit.md  test_ai_services.py  validate_macos_vst.sh
.github/workflows/: azure-deploy.yml
attached_assets/: Pasted-Great-I-ll-assemble-a-study-guide-focused-on-developing-an-AI-training-platform-in-Rust-that-levera-1750445034318_1750445034320.txt
bicep/: main.bicep
docs/: ARCHITECTURE_OVERVIEW.md  DEPLOYMENT_GUIDE.md  GETTING_STARTED.md  ORGANIZATION_SUMMARY.md  README.md  api-reference.md  ci-cd-setup.md  contributing.md  core-concepts.md  deployment-azure.md  deployment-checklist.md  examples.md  faq.md  framework-summary.md  getting-started.md  performance.md  production-demo.md  roadmap.md
docs/tutorials/: basic-tutorial.md
examples/: ai_service_demo.py  computer_vision_demo.rs  nlp_demo.rs  simple_neural_network.rs
src/: ai_enhanced_training.rs  autograd.rs  dsp_utils.rs  envelope.rs  filter.rs  lib.rs  main.rs  oscillator.rs  parameters.rs  suppress_warnings.rs  tensor.rs  tester.rs  ui.rs
src/ai_services/: anthropic.rs  gemini.rs  grok.rs  mod.rs  openai.rs  orchestrator.rs  perplexity.rs
src/api/: ai_enhancement.rs  auth.rs  inference.rs  mod.rs  models.rs  training.rs
src/autograd/: mod.rs
src/backend/: mod.rs
src/data/: mod.rs
src/deployment/: mod.rs
src/distributed/: mod.rs
src/llm/: mod.rs
src/loss/: mod.rs
src/metrics/: mod.rs
src/nlp/: mod.rs
src/nn/: activation.rs  conv.rs  dropout.rs  linear.rs  loss.rs  mod.rs  module.rs  normalization.rs  pooling.rs  rnn.rs  transformer.rs
src/optim/: adagrad.rs  adam.rs  adamw.rs  mod.rs  rmsprop.rs  sgd.rs
src/transforms/: mod.rs
src/utils/: mod.rs
src/vision/: mod.rs
src/wrappers/: cuda.rs  keras.rs  metal.rs  mod.rs  pytorch.rs  tensorflow.rs
