[package]
name = "basic_synth_vst"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A basic VST synthesizer plugin with oscillators, ADSR envelope, and filters"

[lib]
name = "basic_synth_vst"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "test_synth"
path = "src/bin/test_synth.rs"

[dependencies]
vst = "0.3.0"
log = "0.4"
# Add atomic float for thread-safe parameters
atomic_float = "0.1"
# Faster math operations
realfft = "3.1.0"
# Audio output for tester
cpal = "0.15.2"
hound = "3.5.1"  # For WAV file output
clap = "4.4.6"   # For command-line interface
# GUI dependencies
raw-window-handle = "0.5.0"
baseview = "0.1.0"
iced_baseview = { version = "0.0.1", features = ["image"] }
iced = { version = "0.8.0", features = ["canvas", "image"] }
iced_native = "0.9.1"
iced_graphics = "0.7.0"
iced_wgpu = "0.9.0"
# For serialization (needed for preset saving)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"  # For finding user directories to save presets

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
