[package]
name = "rust_ml_framework"
version = "0.1.0"
edition = "2021"
authors = ["ML Framework Team"]
description = "A comprehensive machine learning framework in Rust - TensorFlow and PyTorch clone"

[lib]
name = "rust_ml_framework"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ml_examples"
path = "src/bin/examples.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "ml_server"
path = "src/main.rs"

[dependencies]
# Core numerical computing
ndarray = { version = "0.15", features = ["rayon", "serde"] }
ndarray-linalg = { version = "0.16", features = ["openblas-static"] }
ndarray-rand = "0.14"
ndarray-stats = "0.5"

# Linear algebra backends
blas-src = { version = "0.8", features = ["openblas"] }
lapack-src = { version = "0.8", features = ["openblas"] }

# GPU acceleration (CUDA/OpenCL) - simplified for initial build
# candle-core = "0.4"
# candle-nn = "0.4" 
# candle-transformers = "0.4"
# wgpu = "0.19"

# Parallel processing
rayon = "1.8"
crossbeam = "0.8"

# Optimization and autodiff - simplified for initial build
# dfdx = "0.12"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Data loading and preprocessing
csv = "1.3"
# image = "0.24"  # Temporarily disabled for build
# hdf5 = "0.8"    # Temporarily disabled for build

# Model serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
safetensors = "0.4"

# Progress bars and metrics
indicatif = "0.17"
tqdm = "0.5"

# Plotting and visualization
plotters = "0.3"

# Async runtime and web server
tokio = { version = "1.0", features = ["full"] }
actix-web = "4.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Command line interface
clap = { version = "4.4", features = ["derive"] }

# Memory management
memmap2 = "0.9"

# SIMD operations
wide = "0.7"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Configuration
# config = "0.13"  # Temporarily disabled due to dependency conflicts
toml = "0.8"

# Networking for distributed training
reqwest = { version = "0.11", features = ["json"] }

# Compression
flate2 = "1.0"

# FFI for Python integration
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

[features]
default = ["cpu"]
cpu = []
gpu = []
python = ["pyo3"]
distributed = []

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
